fixed bugs on mobile screens #3

--- a/css/sass/dev.sass
+++ b/css/sass/dev.sass
@@ -35,6 +35,9 @@ body
     @media screen and (max-width: 747px)
         width: 100%
 
+    input
+        -webkit-appearance: none !important
+        
     #topBlock
         width: 748px
         height: 104px
@@ -516,5 +519,6 @@ body
         .editModalButtons:hover
             color: $bgDefault
             background: $primaryColor
+
 
 
